# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "proxybuffer",
    importpath = "github.com/lowRISC/ot-provisioning/src/proxy_buffer/services/proxybuffer",
    srcs = ["proxybuffer.go"],
    deps = [
        "//src/proxy_buffer/proto:validators",
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "//src/proxy_buffer/store:db",
        "@io_etcd_go_etcd_client_v3//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "proxybuffer_test",
    srcs = ["proxybuffer_test.go"],
    deps = [
        ":proxybuffer",
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "//src/proxy_buffer/store:db",
        "//src/proxy_buffer/store:db_fake",
        "//src/proto:device_id_go_pb",
        "//src/proto:device_testdata",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)