# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "proxybuffer",
    srcs = ["proxybuffer.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/services/proxybuffer",
    deps = [
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "//src/proxy_buffer/proto:validators",
        "//src/proxy_buffer/store:db",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "proxybuffer_test",
    srcs = ["proxybuffer_test.go"],
    deps = [
        ":proxybuffer",
        "//src/proto:device_testdata",
        "//src/proto:registry_record_go_pb",
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "//src/proxy_buffer/store:db",
        "//src/proxy_buffer/store:db_fake",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)

go_library(
    name = "http_registry",
    srcs = ["http_registry.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/services/httpregistry",
    deps = [
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "http_registry_test",
    srcs = ["http_registry_test.go"],
    deps = [
        ":http_registry",
        "//src/proto:device_testdata",
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
