# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "syncer",
    srcs = ["syncer.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/proxy_buffer/syncer",
    deps = [
        "//src/proto:registry_record_go_pb",
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "//src/proxy_buffer/services:proxybuffer",
        "//src/proxy_buffer/store:db",
        "@org_golang_google_grpc//codes",
    ],
)

go_test(
    name = "syncer_test",
    srcs = ["syncer_test.go"],
    deps = [
        ":syncer",
        "//src/proto:device_testdata",
        "//src/proto:registry_record_go_pb",
        "//src/proxy_buffer/proto:proxy_buffer_go_pb",
        "//src/proxy_buffer/store:db",
        "//src/proxy_buffer/store:db_fake",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
