# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "registry_buffer_proto",
    srcs = ["registry_buffer.proto"],
    deps = ["//src/pa/proto:pa_proto"],
)

go_proto_library(
    name = "registry_buffer_go_pb",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/registry_buffer/proto/registry_buffer_go_pb",
    proto = ":registry_buffer_proto",
    deps = [
        "//src/pa/proto:pa_go_pb",
    ],
)
