# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "spm_proto",
    srcs = ["spm.proto"],
    deps = [
        "//src/pa/proto:pa_proto",
        "//src/proto:device_id_proto",
        "//src/proto/crypto:cert_proto",
        "//src/proto/crypto:common_proto",
    ],
)

go_proto_library(
    name = "spm_go_pb",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/proto/spm_go_pb",
    proto = ":spm_proto",
    deps = [
        "//src/pa/proto:pa_go_pb",
        "//src/proto:device_id_go_pb",
        "//src/proto/crypto:cert_go_pb",
        "//src/proto/crypto:common_go_pb",
    ],
)
