# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "spm",
    srcs = ["spm.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/spm",
    deps = [
        ":certloader",
        ":se",
        "//src/cert:signer",
        "//src/cert/templates:tpm",
        "//src/pa/proto:pa_go_pb",
        "//src/pk11",
        "//src/proto/crypto:cert_go_pb",
        "//src/proto/crypto:common_go_pb",
        "//src/proto/crypto:ecdsa_go_pb",
        "//src/proto/crypto:rsa_ssa_pcks1_go_pb",
        "//src/proto/crypto:wrap_go_pb",
        "//src/spm/proto:spm_go_pb",
        "//src/transport/auth_service:session_token",
        "//src/utils",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_library(
    name = "certloader",
    srcs = ["certloader.go"],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/certloader",
    deps = [
        "//src/cert:signer",
        "//src/cert/templates:tpm",
        "//src/proto/crypto:common_go_pb",
        "//src/utils",
        "@io_bazel_rules_go//go/tools/bazel",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_library(
    name = "se",
    srcs = [
        "se.go",
        "se_pk11.go",
    ],
    importpath = "github.com/lowRISC/opentitan-provisioning/src/spm/services/se",
    deps = [
        "//src/cert:signer",
        "//src/pk11",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "se_pk11_test",
    srcs = ["se_pk11_test.go"],
    embed = [":se"],
    deps = [
        ":certloader",
        "//src/cert:signer",
        "//src/cert/templates:tpm",
        "//src/pk11",
        "//src/pk11:test_support",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_tink_go//kwp/subtle:go_default_library",
        "@org_golang_x_crypto//hkdf",
    ],
)
